--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,6 +11,7 @@ body {
 }
 
 .ant-layout {
+    background-color: red;
     min-height: 100vh;
 }
 
@@ -31,7 +32,7 @@ body {
 }
 
 .logo {
-    height: 32px;
+    height: 50px;
 //min-width: 120px;
     /*background-image: url('../imgs/logo.png');*/
     /*!*background-color: #00aeef;*!*/
@@ -102,12 +103,64 @@ body {
 }
 
 .page-title {
-    font-size: 2.0rem;
+    color:deepskyblue;
+    font-size: 50px;
     text-align: center;
     text-transform: uppercase;
     margin: 30px 0 20px;
 }
 
+.subtitulo{
+    text-align:center;
+    color:yellow;
+}
+
+.imageninicio{
+    height: 500px;
+}
+
+.imagen1{
+    height: 500px;
+}
+
+.imagen2{
+    height: 500px;
+}
+
+.imagen3{
+    height: 500px;
+}
+
+.postulante{
+    height: 200px;
+    width: 360px;
+    margin-left: 115px;
+}
+
+.empresa{
+    height: 200px;
+    margin-left: 160px;
+}
+
+.t1{
+    margin-left: 220px;
+    font-size: 20px;
+    color: yellow;
+}
+
+.t2{
+    margin-top: -52px;
+    margin-left: 800px;
+    font-size: 20px;
+    color: yellow;
+}
+
+.t3{
+
+    text-align: center;
+    font-size: 20px;
+    color: yellow;
+}
 .content {
     overflow: initial;
     padding: 50px 0;
