--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -5,3 +5,14 @@
 /*    border: 1px solid #ccc;*/
 /*    border-radius: 4px;*/
 /*}*/
+
+.logo1{
+
+    height: 100px;
+    margin-left: 500px;
+}
+
+.t4{
+    color: yellow;
+    text-align: center;
+}
